<resources>
    <string name="app_name">clothes-store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price</string>
    <string name="quantity">quantity</string>
    <string name="country">Country</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
</resources>